<resources>
    <string name="app_name">AroundYou</string>
    <string name="profile">Profile</string>
    <string name="neighbours">Neighbours</string>
    <string name="requests">Requests</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_title">Авторизация</string>
    <string name="register_title">Регистрация</string>
    <string name="login_hint">login</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">password</string>
    <string name="login_btn">Авторизоваться</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="text_login_from_register">Нет аккаунта? Зарегистрироваться.</string>
    <string name="text_register_from_login">Уже зарегистрированы? Авторизоваться.</string>
    <string-array name="sex">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string name="about_hint">О себе</string>
    <string name="age_hint">Ваш возраст</string>
    <string name="json_web_token">jwt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_marker_str">You</string>
    <string name="dest_marker_str">Dest</string>
    <string name="arrow"><![CDATA[=>]]></string>
    <string name="expand_str"><u>Еще</u></string>
    <string name="collapse_str"><u>Скрыть</u></string>
    <string name="request_created_str">Запрос на встречу успешно создан</string>
    <string name="request_exists_str">Запрос уже существует</string>
    <string name="request_accepted_str">Запрос принят</string>
    <string name="user_busy_str">Пользователь занят. Попробуйте позже</string>
    <string name="request_declined_str">Запрос отклонен</string>
    <string name="submit"><u>Принять</u></string>
    <string name="decline"><u>Отклонить</u></string>
    <string name="long_sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="can_not_meet_str">Вы не сможете встретиться с другими пользователями</string>
    <string name="stop_tracking_str">Прекратите отслеживание текущего пользователя</string>
    <string name="you_got_requests_template">Вы получили %d новых запросов \n</string>
    <string name="request_accepted_template">%s принял ваш запрос. Началось отслеживание</string>
    <string name="stop_tracking_command">Прекратить отслеживание</string>
    <string name="not_tracking_str">Некого отслеживать</string>
    <string name="tracking_stopped_str">Отслеживание остановлено</string>
    <string name="interrupted_str">Ваш собеседник прервал отслеживание</string>
    <string name="logout_str">Выйти</string>
    <string name="failed_to_authorize_str">Неверная пара логин/пароль</string>
    <string name="response_code_template">Response code is %d</string>
    <string name="connection_lost_str">Нет сети</string>
    <string name="out_of_range_str">Пользователь вне зоны доступа</string>
    <string name="server_internal_error_str">Сервер упал</string>
    <string name="duplicate_user_str">Пользовтель с таким именем уже существует</string>
    <string name="user_not_found_str">Пользователь не найден (что странно)</string>
</resources>
