<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textSize="@dimen/auth_main_text_size"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_register" />

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/age_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinner_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sex" />

    <EditText
        android:id="@+id/about_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_register" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_register" />


    <TextView
        android:id="@+id/link_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/text_register_from_login"
        android:textAlignment="center"
        android:textSize="@dimen/link_text_size"
        android:textStyle="italic" />


</LinearLayout>

