<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="@dimen/auth_main_text_size"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_login" />

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_login" />


    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/text_login_from_register"
        android:textAlignment="center"
        android:textSize="@dimen/link_text_size"
        android:textStyle="italic" />

</LinearLayout>

