<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical"
    tools:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/requester_login_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                tools:text="Петя" />

            <TextView
                android:id="@+id/requester_about_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp"
                android:maxLines="3"
                android:ellipsize="end"
                android:gravity="start"
                tools:text="@string/long_sentence" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/submit_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="start"
                android:layout_margin="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/submit"/>

            <TextView
                android:id="@+id/decline_str"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="end"
                android:layout_margin="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/decline"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>